--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </label>
       <label>
         Password iteration:<br>
-        <input type="number" name="inp_iteration" value="0" required>
+        <input type="number" name="inp_iteration" value="0" min="0" required>
         <p class="smallTopMargin">Sometimes you need to have a new fresh password, to do this just increment the password iteration. But please remember which iteration you used for this service! If you forgot it you can just try several until you find the correct one though.</p>
       </label>
       <button type="submit" hidden></button>
