--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h1 class="long">JLC's Secure Password Scheme PWA</h1>
   <h1 class="short">JLC's SPS PWA</h1>
   <small class="expTitle">JLC's Secure Password Scheme PWA</small>
-  <p class="noTopMargin">An application to manage your passwords in a super secure way (accessible to all your devices) without needing to store them anywhere or sync any data; since they're procedurally generated (on demand) directly on your device. You only need to remember your master password and from it super strong passwords can be generated for every service you want to use with this scheme.</p>
+  <p class="noTopMargin">An application to manage your passwords in a super secure way (accessible to all your devices) without needing to store them anywhere or sync any data; since they're procedurally generated (on demand) directly on your device. You only need to remember your master password and from it super strong passwords can be generated for every service you want to use with this scheme. For more info <a href="https://github.com/JoakimCh/Secure-Password-Scheme#faq-please-read-before-using">please read the FAQ.</a></p>
   <fieldset><legend>Personal seed:</legend>
     <form id="frm_personalSeed" autocomplete="off" class="grid">
       <label>
